--- a/ui/index.html
+++ b/ui/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html class="bg-gray-800" lang="en">
     <head>
         <meta charset="utf-8" />
-        <title>Kouchan</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link data-trunk rel="css" href="/styles/output.css" />
+        <title>kouchan</title>
     </head>
 </html>
