--- a/ui/index.html
+++ b/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="bg-gray-800" lang="en">
+<html class="bg-dark-purple" lang="en">
     <head>
         <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
