Added dark mode

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html class="bg-dark-purple" lang="en">
+<html lang="en" id="root" class="dark">
     <head>
         <meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link data-trunk rel="css" href="/styles/output.css" />
         <title>kouchan</title>
     </head>
+    <body class="dark:bg-custom-black bg-custom-white">
+	    </body>
 </html>
